--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME="MyCash Money"
-APP_ENV=local
+APP_ENV=development
 APP_KEY=base64:xuVxHXMX0svRqpNxom1xALvjZ8utO4QXBGj+bCddHsU=
 APP_DEBUG=true
 APP_URL=http://localhost:4004
