--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.2.6",
+    "@nestjs/typeorm": "^8.0.3",
     "hbs": "^4.2.0",
     "hbs-utils": "0.0.4",
     "joi": "^17.5.0",
@@ -42,7 +43,7 @@
     "@types/express": "^4.17.13",
     "@types/hapi__joi": "^17.1.8",
     "@types/jest": "27.0.2",
-    "@types/node": "^16.0.0",
+    "@types/node": "^16.11.21",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
