--- a/.env
+++ b/.env
@@ -5,12 +5,13 @@ APP_DEBUG=true
 APP_URL=http://localhost:4004
 APP_PORT=4004
 
-DB_CONNECTION=mysql
+DB_CONNECTION=default
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=test_old_db
+DB_USERNAME=root
+DB_PASSWORD=
+DB_SYNC=true #make false in production
 
 
 LOG_CHANNEL=daily
