--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.2.6",
     "@nestjs/typeorm": "^8.0.3",
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.2",
     "hbs": "^4.2.0",
-    "hbs-utils": "0.0.4",
     "joi": "^17.5.0",
+    "liquidjs": "^9.33.1",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -40,7 +43,9 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/hapi__joi": "^17.1.8",
     "@types/jest": "27.0.2",
     "@types/node": "^16.11.21",
