--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,20 @@
 APP_NAME="MyCash Money"
-APP_ENV=production
-APP_KEY=base64:CVwJW1iK5bjHBk3VJ3izFXyAMllIL1IuulXgz1uRxLI=
+APP_ENV=development
+APP_KEY=base64:xuVxHXMX0svRqpNxom1xALvjZ8utO4QXBGj+bCddHsU=
 APP_DEBUG=true
-APP_URL=https://bdmycash.com
-DEBUGBAR_ENABLED=false
+APP_URL=http://localhost:4004
+APP_PORT=4004
 
-LOG_CHANNEL=daily
-
-DB_CONNECTION=mysql
+DB_CONNECTION=default
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=my_cash_money
-DB_USERNAME=bkash_fintech
-DB_PASSWORD=d5y$;toiyd+=
-#old db support
-#DB_OLD_DATABASE=mybankmy_my_cash_old
+DB_DATABASE=test_old_db
+DB_USERNAME=root
+DB_PASSWORD=
+DB_SYNC=true #make false in production
+
+
+LOG_CHANNEL=daily
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
