env update ddocker added env updated

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME="MyCash Money"
 APP_ENV=development
-APP_KEY=base64:xuVxHXMX0svRqpNxom1xALvjZ8utO4QXBGj+bCddHsU=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:4004
 APP_PORT=4004
@@ -8,7 +8,7 @@ APP_PORT=4004
 DB_CONNECTION=default
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=test_old_db
+DB_DATABASE=
 DB_USERNAME=root
 DB_PASSWORD=
 DB_SYNC=true #make false in production
@@ -51,11 +51,11 @@ IPINFO_TOKEN=
 
 ARCANEDEV_LOGVIEWER_MIDDLEWARE=web,auth
 
-#GOOGLE_MAP_API_KEY=AIzaSyBha142h6waK2UgJblNmopipi7opAMP8s4
-GOOGLE_MAP_API_KEY=AIzaSyDiLzoUyBstz4AStcU_Sa3x2glzi4Zj7gU
+#GOOGLE_MAP_API_KEY=
+GOOGLE_MAP_API_KEY=
 
-ONFIDO_SDK_SENDBOX=sdk_sandbox.DdG4rYltMTp.2WYsXmLqauiGCID_aTpPe5e7FvFIkBah
-ONFIDO_API_SENDBOX=api_sandbox.dRuHyo5duiF.o3jmh0LkLo6q_zmKikVJWNjSNvpc0u8V
+ONFIDO_SDK_SENDBOX=
+ONFIDO_API_SENDBOX=
 ONFIDO_SDK_LIVE=
-ONFIDO_API_LIVE=api_live.UjIpLCybsqY.8CBdkTInmqDJEU6ZpjVln8rNiC53fydd
+ONFIDO_API_LIVE=
 
