--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "@nestjs/typeorm": "^8.0.3",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
+    "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "hbs": "^4.2.0",
     "joi": "^17.5.0",
-    "liquidjs": "^9.33.1",
+    "liquidjs": "^9.34.0",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
