old files removed

--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ APP_URL=http://localhost:4004
 APP_PORT=4004
 
 DB_CONNECTION=default
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=
+DB_DATABASE=nest_crud
 DB_USERNAME=root
 DB_PASSWORD=
 DB_SYNC=true #make false in production
