--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "cookie-parser": "^1.4.6",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
+    "g": "^2.0.1",
     "hbs": "^4.2.0",
     "joi": "^17.5.0",
+    "json-server": "^0.17.0",
     "liquidjs": "^9.34.0",
     "mysql2": "^2.3.3",
     "passport": "^0.5.2",
