--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
